--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- School Building Showcase -->
             <div class="school-showcase">
                 <div class="school-image">
-                    <img src="./images/school-building.png" alt="Megamind Innovative School Building"
+                    <img src="./school-building.png" alt="Megamind Innovative School Building"
                         class="building-image">
                 </div>
                 <div class="school-highlights">
